--- a/templates/login.html
+++ b/templates/login.html
@@ -1,12 +1,7 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "layout.html" %}
+
+{% block content %}
+
     <h1>login</h1>
     <form action="/login" method="post">
     <input type="text" name="name" placeholder="Name">
@@ -14,5 +9,4 @@
     <input type="submit" value="Login">
     </form>
     <!-- <input type="number" name="" id=""> 数字しか入力できない -->
-</body>
-</html>
+{% endblock %}
