--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,17 +1,43 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>signup</h1>
-    <form action="/signup" method="post">
-    <input type="text" name="name" placeholder="Name">
-    <input type="password" name="password" placeholder="Password">
-    <input type="submit" value="signup">
-    </form>
-</body>
-</html>
+{% extends "layout.html" %}
+
+{% block content %}
+<h1>signup</h1>
+<div class="input-group mb-3">
+    <input type="text" name="name" class="form-control" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1">
+</div>
+<form action="/signup" method="post">
+    <div class="container">
+        <div class="row">
+            <div class="col-3">
+            </div>
+            <div class="input-group mb-3">
+                <input type="password" name="password" class="form-control" placeholder="Password">
+            </div>
+            <div class="col-6">
+                <input class="btn btn-success" type="submit" value="signup">
+            </div>
+        </div>
+</form>
+<div class="row">
+    <div class="col-4 offset-4 text-center">
+        <!-- offsetで両端の余白 4で両端4行余白で指定 -->
+        <!-- colで真ん中指定 4で真ん中4行指定 -->
+        <h1 class="mt-3 mb-3">signup</h1>
+        <form action="/signup" method="post">
+            <div class="input-group mb-3">
+                <input type="text" name="name" class="form-control" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="input-group mb-3">
+                        <input type="password" name="password" class="form-control" placeholder="Password">
+                    </div>
+                    <div class="input-group mb-3">
+                        <input class="btn btn-success" type="submit" value="signup">
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
+{% endblock %}
